--- a/app/src/main/res/layout/fragment_report_student.xml
+++ b/app/src/main/res/layout/fragment_report_student.xml
@@ -1,54 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:orientation="horizontal"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/report"
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
+
+            <org.eazegraph.lib.charts.PieChart
+                android:id="@+id/piechart"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:padding="8dp"
+                app:egLegendTextSize="18sp"
+                app:egUsePieRotation="true"
+                app:egValueTextSize="36sp" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:layout_marginTop="10dp"
+                android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent"/>
 
-            <com.anychart.AnyChartView
-                android:id="@+id/pie_chart"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:layout_margin="10dp" />
-
-            <com.anychart.AnyChartView
-                android:id="@+id/line_chart"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:layout_margin="10dp" />
         </LinearLayout>
-
-        <LinearLayout
-            android:visibility="gone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/no_report"
-                android:text="No Report"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-
-    </LinearLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
-
-
-
-
-</androidx.core.widget.NestedScrollView>
+</LinearLayout>
