--- a/app/src/main/res/layout/recycler_chat.xml
+++ b/app/src/main/res/layout/recycler_chat.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/container"
-    android:orientation="vertical"
-    android:layout_margin="10dp">
+    android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card"
@@ -19,19 +18,20 @@
         <LinearLayout
             android:layout_margin="10dp"
             android:orientation="vertical"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/roboto_black"
                 android:textSize="18sp"
                 tools:text="This is the message" />
 
             <LinearLayout
                 android:layout_marginTop="10dp"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <LinearLayout
                     android:layout_weight="1"
@@ -48,11 +48,12 @@
                 </LinearLayout>
 
                 <TextView
+                    android:layout_marginLeft="10dp"
                     android:id="@+id/time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
-                    android:fontFamily="@font/roboto_black"
+                    android:fontFamily="@font/roboto"
                     tools:text="15 Nov 2020" />
             </LinearLayout>
         </LinearLayout>
